@@ -169,6 +169,7 @@ of this release.
    similar from the contrib/ change log files may also be necessary. ]]
 
 Alex Colomar
+Alexander Kanavin
 Bjarni Ingi Gislason
 Brian Inglis
 Bruno Haible
